# common_qml

./: .gitattributes  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
common_qml/: CMakeLists.txt  __init__.py
common_qml/qml/CommonQml/Fonts/: FontLoader.js  qmldir
common_qml/qml/CommonQml/Helper/: DebugArea.qml  qmldir
common_qml/qml/CommonQml/Icons/: IconLoader.js  qmldir
common_qml/qml/CommonQml/Items/: DoubleSpinBox.qml  FileFolderSelector.qml  RotatingLoadingScreen.qml  SliderSpinBox.qml  SliderSpinBoxFading.qml  SliderSpinBoxHighlightedBackground.qml  SliderSpinBoxZoned.qml  SliderSpinBoxZonedBackground.qml  TickSlider.qml  qmldir
common_qml/qml/CommonQml/Misc/: Svg.qml  qmldir
common_qml/qml/CommonQml/SidebarApp/: NavigationSidebar.qml  NavigationSidebar.qml.autosave  NavigationSidebarButton.qml  SidebarApp.qml  SidebarAppView.qml  SidebarAppViewProperties.qml  qmldir
common_qml/qml/CommonQml/SidebarApp/Views/: BaseSettingsView.qml  BaseStartView.qml  qmldir
common_qml/qml/CommonQml/TestModule/: qmldir
common_qml/qml/TestModule/: TestElement.qml  qmldir
examples/cpp/: CMakeLists.txt  main.cc  ui.qrc
examples/cpp/frontend/qml/: frontend.qml
examples/python/: CMakeLists.txt  main.py  requirements.txt
examples/python/frontend/: CMakeLists.txt
examples/python/frontend/qml/: Frontend.qml  SettingsView.qml  StartView.qml
examples/python/frontend/qml/items/: LocalElement.qml
examples/python/frontend/qml/views/: FileOpenerView.qml  LoadingScreenView.qml  SettingsView.qml  SliderView.qml  (+2 more)
